Updated byline to link to my Twitter account.

--- a/views/_header.erb
+++ b/views/_header.erb
@@ -1,4 +1,4 @@
 <div id="header">
   <h1>Nth Tweet</h1>
-  <h2>By <a href="http://maraby.org/">Matt Todd</a></h2>
+  <h2>By <a href="http://twitter.com/mtodd/">Matt Todd</a></h2>
 </div>
